Styling fixes for resize and scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1000px) {
 
   html {
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
   }
   
   *, *::before, *::after {
@@ -10,10 +10,38 @@
     margin: 0;
   }
   
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 4px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(113, 207, 219, 0.5);
+    box-shadow: 0 0 1px rgba(214, 35, 35, 0.911);
+  }
+  
+
   .app {
     width: 90%;
     margin: 0 auto;
     padding: 20px;
+  }
+  .dashContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    flex-direction: column;
+  }
+
+  .polyAccountGraph {
+    width: 100%;
+  }
+
+  .polyAccountGraphLeft {
+    width: 100%;
   }
   
   nav ul {
@@ -26,8 +54,8 @@
 
 nav ul li {
   font-family: 'Lato', 'Avenir', 'sans-serif';
-  padding: 40px;
-  font-size: 20px;
+  padding: 8px;
+  font-size: 12px;
 }
 
 nav ul li a {
@@ -37,22 +65,37 @@ nav ul li a {
 
 nav {
   width:100%;
-  height:100px !important;
-  height: 80px;
+  height:6vw;
   display: flex;
-  justify-content: right;
+  justify-content: center;
   padding: 10px;
   z-index: 10;
 }
+.welcomePrompt {
+  position: relative; /* or absolute */
+  top: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 1em;
+}
+
 .personal{
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
-  width: 50%;
+  width: 100%;
+  height: 500px;
   float:left;
 }
 .drawing{
-  width:50%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  
+  width:0%;
+  height:100%;
+  justify-content: center;
   float:right;
 }
 
@@ -84,8 +127,8 @@ h1 {
   font-family: 'Lato', 'Avenir', 'sans-serif';
   font-size: 25px;
   font-weight: 800;
-  margin-top: 50%;
-  margin-left: 10%;
+  margin-top: 10px;
+  margin-left: 50%;
 }
 
 h2 {
@@ -132,7 +175,7 @@ label{
 
 }
 
-@media only screen and (min-width: 1200px) and (max-width: 1800px) {
+@media only screen and (min-width: 1000px) and (max-width: 1800px) {
 
   html {
     box-sizing: border-box;
@@ -144,10 +187,60 @@ label{
   margin: 0;
 }
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(113, 207, 219, 0.5);
+  box-shadow: 0 0 1px rgba(214, 35, 35, 0.911);
+}
+
 .app {
   width: 90%;
   margin: 0 auto;
   padding: 20px;
+}
+
+.dashContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: min-content;
+  flex-direction: column;
+  overflowY: hidden;
+}
+
+.polyAccountGraph {
+  width: 50%;
+  position: absolute;
+  right: 0;
+}
+
+.polyAccountGraphLeft {
+  width: 48%;
+  position: absolute;
+  left: 0;
+}
+
+.slider li {
+  position: unset !important;
+  height: unset !important;
+  padding-bottom: unset !important;
+}
+.slider li .carousel__inner-slide {
+  position: unset;
+}
+
+.slider-container {
+  width: 100%;
+  height: 100%;
+  position:fixed; /* add this code for position fixed */
+  top:0px; /* set top and left 0 */
+  left:0px;
 }
 
 nav ul {
@@ -174,25 +267,41 @@ nav {
   height:100px !important;
   height: 80px;
   display: flex;
-  justify-content: right;
+  justify-content: center;
   padding: 10px;
   z-index: 10;
 }
 
 .welcomePrompt {
-  position: absolute; /* or absolute */
+  position: relative; /* or absolute */
   top: 40%;
-  left: 17%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 3em;
 }
+
 .personal{
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
-  width: 50%;
   float: left;
-}
-.drawing{
   width:50%;
+  height: 60vh;
+  overflow-y:scroll;
+  /* width: 65%; */
+}
+.slider-container {
+  width: 100%;
+  height: 100%;
+  
+  position:fixed;
+  top:0;
+  left:0;
+  
+  }
+.drawing{
+  width:49%;
   float:right;
 }
 .current{
@@ -208,6 +317,7 @@ img{
 
 h1 {
   margin-top: 20px;
+  margin-left: 50%;
   margin-bottom: 20px;
   font-family: 'Lato', 'Avenir', 'sans-serif';
   font-size: 55px;
@@ -265,6 +375,9 @@ svgLines{
   position: absolute;
   top: 0;
   right: 0;
+  align-content:center;
+  justify-content: center;
+  margin: 0 auto;
 }
  
 #butt{
@@ -279,6 +392,41 @@ svgLines{
 }
 
 }
+button{
+  background:#9ee4eb;
+  color:#fff;
+  border:none;
+  position:relative;
+  height:60px;
+  padding:0 1.8em;
+  cursor:pointer;
+  transition:800ms ease all;
+  outline:none;
+}
+button:hover{
+  background:#fff;
+  color:#9ee4eb;
+}
+button:before,button:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:2px;
+  width:0;
+  background: #9ee4eb;
+  transition:400ms ease all;
+}
+button:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+}
+button:hover:before,button:hover:after{
+  width:100%;
+  transition:800ms ease all;
+}
 
 @media only screen and (min-width: 1800px) {
 
@@ -291,12 +439,82 @@ svgLines{
     padding: 0;
     margin: 0;
   }
+
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 4px;
+  }
   
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(113, 207, 219, 0.5);
+    box-shadow: 0 0 1px rgba(214, 35, 35, 0.911);
+  }
+  
+  
+  button{
+    background:#1AAB8A;
+    color:#fff;
+    border:none;
+    position:relative;
+    height:60px;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+  }
+  button:hover{
+    background:#fff;
+    color:#1AAB8A;
+  }
+  button:before,button:after{
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:2px;
+    width:0;
+    background: #1AAB8A;
+    transition:400ms ease all;
+  }
+  button:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+  }
+  button:hover:before,button:hover:after{
+    width:100%;
+    transition:800ms ease all;
+  }
   .app {
     width: 90%;
     margin: 0 auto;
     padding: 20px;
   }
+
+  .dashContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: min-content;
+    flex-direction: column;
+    overflowY: hidden;
+  }
+  
+  .polyAccountGraph {
+    width: 50%;
+    position: absolute;
+    right: 0;
+  }
+  
+  .polyAccountGraphLeft {
+    width: 48%;
+    position: absolute;
+    left: 0;
+  }
+  
   
   nav ul {
     position: right;
@@ -320,26 +538,46 @@ svgLines{
     height:100px !important;
     height: 80px;
     display: flex;
-    justify-content: right;
+    justify-content: center;
     padding: 10px;
     z-index: 10;
   }
   
+  .welcomePrompt {
+    position: relative; /* or absolute */
+    top: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 7em;
+  }
+
   .personal{
     padding: 30px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
     float: left;
     width:50%;
+    height: 65vh;
+    overflow-y:scroll;
     /* width: 65%; */
   }
+  .slider-container {
+    width: 100%;
+    height: 100%;
+    
+    position:fixed;
+    top:0;
+    left:0;
+    
+    }
   
   .current{
     text-decoration: underline;
   }
 
   .drawing{
-    width:50%;
+    width:49%;
     height:100%;
     float:right;
   }
@@ -359,8 +597,8 @@ svgLines{
     font-family: 'Lato', 'Avenir', 'sans-serif';
     font-size: 55px;
     font-weight: 1600;
-    margin-left: 20%;
-    margin-top: 20%;
+    margin-left: 50%;
+    margin-top: 20px;
   }
   
   h2 {
@@ -398,7 +636,7 @@ svgLines{
     display: block;
   }
 
-.home{
+  .home{
     display: inline;
     width: 100%;
     height: 100%;
@@ -406,6 +644,8 @@ svgLines{
     position: absolute;
     top: 0;
     right: 0;
+    align-content:center;
+    justify-content: center;
   }
   
   
